[gd_scene load_steps=8 format=3 uid="uid://dem2p1krsp4s1"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_ublfp"]
[ext_resource type="Texture2D" uid="uid://chucb1571pjjt" path="res://pngtree-fire-explosion-blast-flame-png-transparent-png-image_4199261.jpg" id="2_6rj66"]
[ext_resource type="ArrayMesh" uid="uid://dtplnxgb8wsmn" path="res://Models/hampter.obj" id="2_p0hih"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3ik4d"]
albedo_color = Color(0.780392, 0.466667, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ljlqn"]
albedo_texture = ExtResource("2_6rj66")

[sub_resource type="QuadMesh" id="QuadMesh_jdcs8"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qw3m5"]

[node name="Body" type="CharacterBody3D"]
script = ExtResource("1_ublfp")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-1.5299e-08, 0, -0.35, 0, 0.35, 0, 0.35, 0, -1.5299e-08, 0, 0, 0)
mesh = ExtResource("2_p0hih")
surface_material_override/0 = SubResource("StandardMaterial3D_3ik4d")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0.0202243, -0.00582182)

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 0.903425, 0.428746, 0, -0.428746, 0.903425, 0, 3.64559, 3.91068)
fov = 64.3246

[node name="Label3D" type="Label3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 0.999818, 0.0190926, 0, -0.0190926, 0.999818, -0.857705, -0.689309, -1.34114)

[node name="EXPLOSION" type="Node3D" parent="."]
transform = Transform3D(1.96455, 0, 0, 0, 1.96455, 0, 0, 0, 1.96455, 0, 0, 0)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="EXPLOSION"]
transform = Transform3D(1.56051, 0, 0, 0, 1.56051, 0, 0, 0, 1.56051, 0, 0.918408, -0.127817)
material_override = SubResource("StandardMaterial3D_ljlqn")
mesh = SubResource("QuadMesh_jdcs8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.7, 0, 0, 0, -3.0598e-08, -0.7, 0, 0.7, -3.0598e-08, 0, 0.0498047, -0.0507507)
shape = SubResource("CapsuleShape3D_qw3m5")

[node name="Raycasts" type="Node3D" parent="."]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0.0202243, -0.00582182)

[node name="Raycast1" type="RayCast3D" parent="Raycasts"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -0.333314)

[node name="Raycast2" type="RayCast3D" parent="Raycasts"]
transform = Transform3D(1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, -0.423929)

[node name="Raycast3" type="RayCast3D" parent="Raycasts"]
